Fixing visibility of supporter links.

--- a/media/css/batucada.css
+++ b/media/css/batucada.css
@@ -2801,11 +2801,10 @@ footer[role="main"] ul[role="cc"] li[role="icons"] a {
 }
 
 footer[role="main"] ul[role="supporters"] {
-   margin-left: 10px;
+   margin-left: 20px;
    margin-top: -65px;
    text-align: center;
-   width: 370px;
-   line-height: 30px;
+   width: 360px;
    font-size: 15px;
 }
 
@@ -2816,6 +2815,8 @@ footer[role="main"] ul[role="supporters"] li[role="hewlett"] a {
   width: 139px;
   overflow: hidden;
   text-indent: -999em;
+  margin-top: 0px;
+  margin-left: 0px;
 }
 
 footer[role="main"] ul[role="supporters"] li[role="shuttleworth"] a {
@@ -2825,7 +2826,9 @@ footer[role="main"] ul[role="supporters"] li[role="shuttleworth"] a {
   width: 210px;
   overflow: hidden;
   text-indent: -999em;
+  position: relative;
+  float: right;
   margin-top: -61px;
-  margin-left: 160px;
+  margin-right: -15px;
 }
 
